<resources>
    <string name="app_name">Proyecto1-Appocalipsis</string>
    <string name="lista_de_dispositivos">Lista de dispositivos</string>
    <string name="tipo">Tipo</string>
    <string name="marca">Marca</string>
    <string name="todo">TODO</string>
    <string name="mas_detalles">mas detalles</string>
    <string name="caracteristicas">Caracteristicas:</string>
    <string name="listar_caracteristicas">Listar Caracteristicas</string>
    <string name="incluye">Incluye</string>
    <string name="listar_lo_que_incluye">Listar lo que incluye</string>
    <string name="todo2">TODO</string>
    <string name="dispositivos_en_stock">Dispositivos en Stock:</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="indique_el_motivo_de_su_reserva">Indique el motivo de su reserva</string>
    <string name="reservar">Reservar</string>
    <string name="indique_su_direccion">Indique su direccion</string>
    <string name="aqui_entrara_lo_de_la_ubicacion">Aqui entrara lo de la ubicacion</string>
    <string name="solicitud_de_reserva">Solicitud de reserva</string>
    <string name="desea_recibir_un_correo_electronico_con_la_respuesta_a_la_reserva">Desea recibir un correo electronico con la respuesta a la reserva</string>
    <string name="ver_lista_de_dispositivos_disponibles">Ver lista de dispositivos disponibles</string>
    <string name="ver_las_solicitudes_de_prestamo">Ver las solicitudes de prestamo</string>
    <string name="ver_el_historial_de_prestamo">Ver el historial de prestamo</string>
    <string name="bienvenido_al_sistema_de_prestamo_pucp">Bienvenido al sistema de prestamo PUCP</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="solicitudes_de_prestamos">Solicitudes de prestamos</string>
    <string name="estado">estado</string>
    <string name="listar_dispositivos">Listar Dispositivos</string>
    <string name="historial_de_reservas">Historial de reservas</string>
    <string name="solicitudes_de_reserva">Solicitudes de reserva</string>
    <string name="subtituloRegistro">A continuación, coloque los datos solicitados para su registro en el sistema. Recuerde verificar su dirección de correo electrónico para finalizar el proceso de registro</string>
    <string-array name="roles">
        <item>--- Seleccione su rol ---</item>
        <item>alumno</item>
        <item>docente</item>
        <item>administrador</item>
    </string-array>
    <string-array name="dispositivos">
        <item>--- Seleccione el tipo de dispositivo ---</item>
        <item>Laptop</item>
        <item>Tableta</item>
        <item>Celular</item>
        <item>Monitor</item>
        <item>Otro</item>
    </string-array>
    <string name="spinneroles_titulo">Rol</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_se_encontraron_resultados">No se encontraron resultados</string>
    <string name="buscar_dispositivo">Buscar Dispositivo</string>
    <string name="obtener_ubicaci_n">Obtener ubicación</string>
    <string name="actualizar_ubicacion">"Actualizar ubicacion"</string>
    <string name="marca">Marca</string>
    <string name="incluye">Incluye</string>
    <string name="stock">Stock</string>
    <string name="cargar_foto">cargar foto</string>
    <string name="tomar_foto">tomar foto</string>
    <string name="agregar_dispositivo">Agregar dispositivo</string>
    <string name="foto">foto</string>
    <string name="historial_de_prestamos">Historial de prestamos</string>
    <string name="gestionar_dispositivos">Gestionar Dispositivos</string>
    <string name="incluye">Incluye</string>
    <string name="marca">Marca</string>
    <string name="stock">Stock</string>
    <string name="cargar_foto">cargar foto</string>
    <string name="tomar_foto">tomar foto</string>
    <string name="actualizar">Actualizar</string>
    <string name="c_digo_de_alumno">Código de alumno</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="bienvenido_al_sistema_de_reserva_de_dispositivos_inform_ticos">Bienvenido al sistema de reserva de dispositivos informáticos</string>
    <string name="a_continuaci_n_coloque_los_datos_solicitados_para_que_se_registre_en_el_sistema">A continuación coloque los datos solicitados para que se registre en el sistema:</string>
    <string name="cancelar">Cancelar</string>
    <string name="solicitudes_para_reservar">Solicitudes para reservar</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="h" />
    <string name="bienvenido_al_sistema_de_reserva_de_dispositivos_inform_ticos">Bienvenido al sistema de reserva de dispositivos informáticos</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="c_digo">Código</string>
    <string name="contrase_a">Contraseña</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">Cancelar</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="editar">editar</string>
    <string name="eliminar">eliminar</string>
    <string name="imagen">imagen</string>
</resources>