<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuario.MasDetalles">

    <ImageView
        android:id="@+id/imagenDetalles"
        android:layout_width="0dp"
        android:layout_height="286dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marcaDetalles"
        app:srcCompat="@android:drawable/btn_dialog"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tipoDetalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/tipo"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/marcaDetalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/marca"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tipoDetalles"
        app:layout_constraintTop_toBottomOf="@+id/tipoDetalles" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/caracteristicas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenDetalles" />

    <TextView
        android:id="@+id/caracteristicasDetalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listar_caracteristicas"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/incluye"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/caracteristicasDetalles"
        app:layout_constraintTop_toBottomOf="@+id/caracteristicasDetalles" />

    <TextView
        android:id="@+id/incluyeDetalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listar_lo_que_incluye"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dispositivos_en_stock"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/incluyeDetalles"
        app:layout_constraintTop_toBottomOf="@+id/incluyeDetalles" />

    <TextView
        android:id="@+id/stockDetalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <Button
        android:id="@+id/reservarDetalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="@+id/stockDetalles"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:text="Reservar" />

</androidx.constraintlayout.widget.ConstraintLayout>