<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tipoDispositivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/tipo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/marcaDispositivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/marca"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tipoDispositivo"
        app:layout_constraintStart_toEndOf="@+id/tipoDispositivo"
        app:layout_constraintTop_toTopOf="@+id/tipoDispositivo"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imagenDispositivo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/marcaDispositivo"
        app:layout_constraintStart_toEndOf="@+id/marcaDispositivo"
        app:layout_constraintTop_toTopOf="@+id/marcaDispositivo"
        app:srcCompat="@android:drawable/btn_dialog"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/datalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/mas_detalles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tipoDispositivo"
        app:layout_constraintTop_toBottomOf="@+id/tipoDispositivo" />
</androidx.constraintlayout.widget.ConstraintLayout>