<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuario.ReservaDispositivos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="37dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/motivoReserva"
                android:layout_width="382dp"
                android:layout_height="74dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:hint="@string/indique_el_motivo_de_su_reserva"
                android:inputType="text"
                android:maxLines="@android:integer/config_mediumAnimTime"
                android:textAlignment="gravity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:text="@string/solicitud_de_reserva"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/direccionReserva"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/indique_su_direccion"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/motivoReserva"
                app:layout_constraintStart_toStartOf="@+id/motivoReserva"
                app:layout_constraintTop_toBottomOf="@+id/motivoReserva" />

            <CheckBox
                android:id="@+id/emailReserva"
                android:layout_width="0dp"
                android:layout_height="63dp"
                android:layout_marginTop="24dp"
                android:text="@string/desea_recibir_un_correo_electronico_con_la_respuesta_a_la_reserva"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/configurarUbicacion"
                app:layout_constraintTop_toBottomOf="@+id/configurarUbicacion" />

            <Button
                android:id="@+id/reservarReserva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/reservar"
                app:layout_constraintEnd_toEndOf="@+id/emailReserva"
                app:layout_constraintStart_toStartOf="@+id/emailReserva"
                app:layout_constraintTop_toBottomOf="@+id/emailReserva" />

            <Button
                android:id="@+id/configurarUbicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/obtener_ubicaci_n"
                app:layout_constraintStart_toStartOf="@+id/direccionReserva"
                app:layout_constraintTop_toBottomOf="@+id/direccionReserva" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>