<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:layout_gravity="center"
    tools:context=".usuario.MenuPrincipalUsuario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp">
            <Button
                android:id="@+id/listaDispositivosMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="156dp"
                android:text="@string/ver_lista_de_dispositivos_disponibles"
                android:background="@drawable/boton_buscar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/solicitudesDePrestamoMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/ver_las_solicitudes_de_prestamo"
                android:background="@drawable/boton_buscar"
                app:layout_constraintEnd_toEndOf="@+id/listaDispositivosMenu"
                app:layout_constraintStart_toStartOf="@+id/listaDispositivosMenu"
                app:layout_constraintTop_toBottomOf="@+id/listaDispositivosMenu" />

            <Button
                android:id="@+id/historialDePrestamoMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/boton_buscar"
                android:text="@string/ver_el_historial_de_prestamo"
                app:layout_constraintEnd_toEndOf="@+id/solicitudesDePrestamoMenu"
                app:layout_constraintStart_toStartOf="@+id/solicitudesDePrestamoMenu"
                app:layout_constraintTop_toBottomOf="@+id/solicitudesDePrestamoMenu" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:text="@string/bienvenido_al_sistema_de_prestamo_pucp"
                android:textSize="24sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/CerrarSesionMenu"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/cerrar_sesion"
                android:background="@drawable/boton_cerrar_sesion"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                app:layout_constraintEnd_toEndOf="@+id/historialDePrestamoMenu"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="@+id/historialDePrestamoMenu"
                app:layout_constraintTop_toBottomOf="@+id/historialDePrestamoMenu" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>