<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Login_Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="364dp"
                android:layout_height="247dp"
                android:layout_marginStart="71dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="71dp"
                android:contentDescription="@string/h"
                android:src="@drawable/image_login3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.535"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/image_login3"
                tools:srcCompat="@drawable/image_login3" />

            <EditText
                android:id="@+id/inputCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/correo_electr_nico"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.551"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/contrase_a"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

            <Button
                android:id="@+id/buttonIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/boton_redondeado"
                android:text="@string/ingresar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/buttonIrARegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/boton_registro"
                android:text="@string/registrarse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/button3"
                app:layout_constraintVertical_bias="0.104" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>